Fix horizontal scroll issue

--- a/rick-and-morty/src/components/Characters/style.scss
+++ b/rick-and-morty/src/components/Characters/style.scss
@@ -85,6 +85,7 @@ body.filters-active {
   }
 
   .card {
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     gap: 2rem;
